<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Spinner
        android:id="@+id/bedroom_spinner"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/property_type_label"
        app:layout_constraintStart_toStartOf="@+id/property_spinner"
        app:layout_constraintTop_toBottomOf="@+id/property_spinner" />

    <TextView
        android:id="@+id/property_type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/property_type_label"
        app:layout_constraintBottom_toBottomOf="@+id/property_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/property_spinner" />

    <Spinner
        android:id="@+id/property_spinner"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/property_type_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bedroom_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/bedroom_label"
        app:layout_constraintBottom_toBottomOf="@+id/bedroom_spinner"
        app:layout_constraintEnd_toStartOf="@+id/bedroom_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bedroom_spinner" />

    <TextView
        android:id="@+id/date_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/date_text"
        app:layout_constraintBottom_toBottomOf="@+id/date"
        app:layout_constraintEnd_toStartOf="@+id/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bedroom_spinner" />

    <EditText
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:focusable="false"
        android:inputType="date"
        android:minHeight="48dp"
        android:textIsSelectable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/bedroom_spinner"
        app:layout_constraintTop_toBottomOf="@+id/bedroom_spinner" />

    <TextView
        android:id="@+id/price_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/price"
        app:layout_constraintBottom_toBottomOf="@+id/price"
        app:layout_constraintEnd_toStartOf="@+id/price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <EditText
        android:id="@+id/price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/date_label"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <TextView
        android:id="@+id/furniture_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/furniture"
        app:layout_constraintBottom_toBottomOf="@+id/furniture_spinner"
        app:layout_constraintEnd_toStartOf="@+id/furniture_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price" />

    <Spinner
        android:id="@+id/furniture_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toEndOf="@+id/price_text"
        app:layout_constraintTop_toBottomOf="@+id/price" />

    <TextView
        android:id="@+id/notes_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/notes"
        app:layout_constraintBottom_toBottomOf="@+id/notes"
        app:layout_constraintEnd_toStartOf="@+id/notes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/furniture_spinner" />

    <EditText
        android:id="@+id/notes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/furniture_label"
        app:layout_constraintTop_toBottomOf="@+id/furniture_spinner" />

    <TextView
        android:id="@+id/reporter_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reporter_name"
        app:layout_constraintBottom_toBottomOf="@+id/reporter_name"
        app:layout_constraintEnd_toStartOf="@+id/reporter_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notes" />

    <EditText
        android:id="@+id/reporter_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/notes_label"
        app:layout_constraintTop_toBottomOf="@+id/notes" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reporter_name"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>